# rofi

./: .gitattributes  INSTALL.md  README.md  meson.build  meson_options.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/setup/: action.yml
.github/workflows/: build.yml
config/: config.c
doc/: man_filter.lua  meson.build  rofi.1  rofi.1.markdown
include/: display-internal.h  display.h  mode-private.h  mode.h  rofi-icon-fetcher.h  rofi-types.h  rofi.h  settings.h  theme.h  view-internal.h  view.h  wayland-internal.h  wayland.h  xcb-dummy.h  xcb.h
include/modes/: dmenuscriptshared.h
include/widgets/: textbox.h  widget.h
mkdocs/docs/1.7.0/: rofi.1.markdown
script/: rofi-sensible-terminal
source/: display.c  helper.c  mode.c  rofi-icon-fetcher.c  rofi.c  theme.c  view.c  xrmoptions.c
source/modes/: combi.c  dmenu.c  drun.c  filebrowser.c  recursivebrowser.c  run.c  script.c  wayland-window.c  window.c
source/wayland/: display.c  view.c
source/widgets/: icon.c  listview.c  scrollbar.c  textbox.c
source/xcb/: display.c  view.c
test/: box-test.c  helper-config-cmdline-parser.c  helper-expand.c  helper-pidfile.c  helper-test.c  helper-tokenize.c  mode-test.c  scrollbar-test.c  textbox-test.c  theme-parser-test.c  widget-test.c
