option('drun', type: 'boolean', value: true, description: 'Desktop file mode')
option('window', type: 'boolean', value: true, description: 'Window switcher mode')
option('check', type: 'feature', description: 'Build and run libcheck-based tests')
option('backends', type: 'array', choices: ['wayland', 'xcb'], description: 'Build with Wayland and/or X11/XCB backend')
